API INTEGRATION USER AND ROLE

--- a/angular.json
+++ b/angular.json
@@ -61,11 +61,18 @@
                         ],
                         "scripts": [
                             "node_modules/jquery/dist/jquery.min.js",
-                            "node_modules/slick-carousel/slick/slick.min.js"
+                            "node_modules/slick-carousel/slick/slick.min.js",
+                            "src/assets/env/env.js"
                         ]
                     },
                     "configurations": {
                         "production": {
+                            "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
                             "budgets": [
                                 {
                                     "type": "initial",
@@ -126,7 +133,7 @@
                         "styles": [
                             "src/styles/styles.scss"
                         ],
-                        "scripts": []
+                        "scripts": ["src/assets/env/env.js"]
                     }
                 }
             }
